# acpca

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
acpca/: __init__.py  new_transform.py  transform.py  utils.py
acpca/tests/: test_confounder_matrix.py  test_transform.py
assets/: pancreas_acpca_metrics.csv  pancreas_cluster_quality.csv
data/: data_brain_w2.rda  data_example1.csv  data_example1.rda  data_example2.csv  data_example2.rda  data_example3.csv  data_example3.rda  data_fly_worm.csv  data_fly_worm.rda  data_fly_worm_merged.csv
notebook/: notebook.ipynb
tools/: clear_notebook_outputs.py  run_pancreas_example.py
