[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acpca"
version = "0.1.0"
description = "Adjusted for Confounding Principal Component Analysis"
authors = [
    {name = "Vlad Gainullin"}
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scikit-learn",
]

[tool.setuptools]
packages = ["acpca"] 